Get image working

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
   <link href="main.css" rel="stylesheet" type="text/css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>Motivational Ron</title>
@@ -20,7 +20,8 @@
       <button type="button" class="my-quote start-page">Use my own quote</button>
       <br>
 
-      <input type="text" name="ron-quote" id="display-text" class="hide" value="There's only one thing I hate more than lying: skim milk. Which is water that's lying about being milk."><br>
+      <input type="text" name="ron-quote" id="display-text" class="hide">
+      </br>
       <button type="button" class="ron-quote hide" id="use-this-quote">Use this quote</button>
       </br>
       <button type="button" class="my-quote hide" id="new-ron-quote">New Ron quote</button>  
