Start on last page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <form>
       <button type="button" class="ron-quote start-page" id="home-get-quote">Get Ron Swanson quote!</button>
       </br>
-      <button type="button" class="my-quote start-page">Use my own quote</button>
+      <button type="button" class="my-quote start-page" id="use-my-quote">Use my own quote</button>
       <br>
 
-      <input type="text" name="ron-quote" id="display-text" class="hide">
+      <input type="text" name="ron-quote" id="display-text" class="hide" placeholder="Enter your quote here...">
       </br>
       <button type="button" class="ron-quote hide" id="use-this-quote">Use this quote</button>
       </br>
@@ -36,7 +36,7 @@
       </br>
       <button type="button" class="my-quote hide" id="shakespear-ize">Shakespear-ize</button>  
        
-      <img src="https://picsum.photos/id/236/400/400" alt="" id="background-image" class="hide"><br>
+      <img src="#" alt="" id="background-image" class="hide"><br>
       <button type="button" class="ron-quote hide" id="use-this-photo">Use this photo</button>
       </br>
       <button type="button" class="my-quote hide" id="new-photo">New photo</button>  
