Add button programming

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <button type="button" class="my-quote start-page" id="use-my-quote">Use my own quote</button>
       <br>
 
-      <input type="text" name="ron-quote" id="display-text" class="hide" placeholder="Enter your quote here...">
+      <input type="text" name="ron-quote" id="display-text-input"  placeholder="Enter your quote here...">
+      <p id="display-text-p" class="hide"></p>
       </br>
       <button type="button" class="ron-quote hide" id="use-this-quote">Use this quote</button>
       </br>
@@ -46,7 +47,7 @@
       
       
 
-    </div>
+      </div>
 
 
       <button type="button" class="ron-quote hide" id="use-this-photo">Use this photo</button>
