Basic functionality working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       <button type="button" class="my-quote start-page" id="use-my-quote">Use my own quote</button>
       <br>
 
-      <input type="text" name="ron-quote" id="display-text-input"  placeholder="Enter your quote here...">
+      <input type="text" name="ron-quote" id="display-text-input"  placeholder="Enter your quote here..." class="hide">
+      <br>
+      <button id="my-quote-to-submit" class="hide">
+        Accept my quote
+      </button>
+      <br>
       <p id="display-text-p" class="hide"></p>
       </br>
       <button type="button" class="ron-quote hide" id="use-this-quote">Use this quote</button>
