--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="main.css" rel="stylesheet" type="text/css"/>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Staatliches&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>Motivational Ron</title>
 </head>
@@ -65,6 +66,12 @@
       </br>  
 
       <button type="button" class="my-quote hide" id="cycle-quote-background">Quote position</button>
+      </br>
+      <button type="button" class="my-quote hide" id="default-font">Default Font</button>
+      </br>
+      <button type="button" class="my-quote hide" id="manly-font">Manly Font</button>
+      </br>
+      <button type="button" class="my-quote hide" id="liberal-font">Liberal Font</button>
       </br>
            
       <button type="button" class="my-quote hide" id="save-design">Save design</button>
