Initial photo page setup

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 
 
       <button type="button" class="ron-quote hide" id="use-this-photo">Use this photo</button>
+      </br> <button type="button" class="ron-quote hide" id="grayscale">Grayscale</button>
+      </br> <button type="button" class="ron-quote hide" id="blur">Blur</button>
       </br>
+
+
 
       <button type="button" class="my-quote hide" id="new-photo">New photo</button>  
       </br>  
