--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </br>
       <button type="button" class="my-quote hide" id="manly-font">Manly Font</button>
       </br>
-      <button type="button" class="my-quote hide" id="liberal-font">Liberal Font</button>
+      <button type="button" class="my-quote hide" id="liberal-font">Hippy Liberal Font</button>
       </br>
 
       <button type="button" class="my-quote hide" id="add-tag-line">Add Tag Line</button>
