--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="module bottom" id="display-module">
        
-        <img src="#" alt="" id="background-image" class="hide"><br>
+        <img src="#" alt="" id="background-image" class="hide responsive"><br>
         <div id="quote-container">
           <p class="final-quote" id="final-quote"></p>
           <p class="tag-line" id="tag-line"></p>
