--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       </br>
 
       <button type="button" class="hide" id="go-home">Start over</button>
-      
+
+      <button type="button"  id="increase-font">Increase Font</button>
+
+      <button type="button"  id="decrease-font">Decrease Font</button>
       </br>  
     </form>
   </div>
