Start straight to canvas

--- a/index.html
+++ b/index.html
@@ -79,7 +79,17 @@
       <button type="button"  id="increase-font">Increase Font</button>
 
       <button type="button"  id="decrease-font">Decrease Font</button>
-      </br>  
+      </br> 
+      <button type="button"  id="text-left">Text Left</button><button type="button"  id="text-right">Text Right</button> 
+      <button type="button"  id="reset-text-width">Reset Text Width</button> 
+
+      <button type="button"  id="text-field-narrow">text field narrower</button> 
+      <button type="button"  id="text-field-wide">text field wider</button> 
+
+      <button type="button"  id="text-up">text up</button> 
+      <button type="button"  id="text-down">text down</button> 
+
+
     </form>
   </div>
 
