Canvas display only

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
 
       </div>
+      <canvas id="myCanvas"></canvas>
 
 
       <button type="button" class="hide" id="use-this-photo">Use this photo</button>
@@ -71,7 +72,7 @@
       <button type="button" class="hide" id="add-tag-line">Add Tag Line</button>
       </br>
            
-      <button type="button" class="hide" id="save-design">Save design</button>
+      <button type="button" class="hide" id="save-design">Refresh</button>
       </br>
 
       <button type="button" class="hide" id="go-home">Start over</button>
@@ -95,7 +96,7 @@
 
 
     <div class="save-design-page"></div>
-    <canvas id="myCanvas"></canvas>
+    
     <footer class="hide">About This App</footer>
   <script src="index.js"></script>
 </body>
