Function complete at 320px

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
 
     <h1 class="start-page">Welcome!</h1>
-    <h2 class="start-page">Let us examine some Swanson wisdom...</h2>
+    <h2 class="start-page">You have landed on the Ron Swanson Motivational Poster Generator</h2>
+    <p class="start-page">Click the button below to create your motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
 
     <form>
       <button type="button" class="start-page" id="home-get-quote">Make me a Ron quote poster!</button>
@@ -36,7 +37,7 @@
 
     <div class="menu-bar hide">
         <input type="checkbox" id="menu"/>
-        <label for="menu" id="nav-icon">Menu</label>
+        <label for="menu" id="nav-icon">&#9776; Menu</label>
 
       <div class="multi-level">
 
