Minor bug fixes with menu

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         </div>    
                 
         <div class="item" id="other-bar">
-          <input type="checkbox" id="F"/>
-          <img src="images/Arrow.png" class="arrow"><label for="F">Other</label>    
+          <input type="checkbox" id="cb-other"/>
+          <img src="images/Arrow.png" class="arrow"><label for="cb-other">Other</label>    
     
           <ul id="other-ul">
             <li><a href="#"  id="save-design">Refresh</a></li>
