Add save button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </form>
 
 
-    
+    <p id="save-message" class="hide">When satisfied with your poster, right click and select "save image as" to save your poster!</p>
     
   
   
