--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   
   
   
-    <footer class="hide">About This App</footer>
+    <footer class="hide">About This App
+      <p><a href="https://www.freepik.com/free-photos-vectors/background">Background photo created by rawpixel.com - www.freepik.com</a></p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
