--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="main.css" rel="stylesheet" type="text/css"/>
   <link href="normalize.css" rel="stylesheet" type="text/css"/>
+  <script src="https://kit.fontawesome.com/3173ff9d6e.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Special+Elite|Staatliches&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>Motivational Ron</title>
@@ -27,6 +28,35 @@
 
     <h1 class="start-page">Welcome!</h1>
     <h2 class="start-page">You have landed on the Ron Swanson Motivational Poster Generator</h2>
+
+
+
+    
+
+
+    <div class="carousel-container">
+        <i class="fas fa-arrow-alt-circle-left" id="prev-button"></i>
+        <i class="fas fa-arrow-alt-circle-right" id="next-button"></i>
+        
+      <div class="carousel-slide">
+          <div id="dummy"></div>
+        <img src="images/image5.png" alt="Ron Swanson Quote" id="last-clone">
+        <img src="images/image1.png" alt="Ron Swanson Quote">
+        <img src="images/image2.png" alt="Ron Swanson Quote">
+        <img src="images/image3.png" alt="Ron Swanson Quote">
+        <img src="images/image4.png" alt="Ron Swanson Quote">
+        <img src="images/image5.png" alt="Ron Swanson Quote">
+        <img src="images/image1.png" alt="Ron Swanson Quote" id="first-clone">
+      </div>
+    </div>
+
+
+
+
+
+
+
+
     <p class="start-page">Click the button below to create your motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
 
     <form>
