Add art and text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <div class="main-container">
+      <div id="ron-image" class="start-page"><img src="images/ron4.jpg" alt="Ron Swanson"></div>
 
     <canvas id="myCanvas" class="hide"></canvas>
 
@@ -26,8 +27,10 @@
       </div>  
     </div>
 
-    <h1 class="start-page">Welcome!</h1>
-    <h2 class="start-page">You have landed on the Ron Swanson Motivational Poster Generator</h2>
+    <h2 class="start-page">Hello.</h1>
+    <h1 class="start-page">Welcome to the Ron Swanson poster generator.</h2>
+    <h3 class="start-page">Here you will find the wise and immutable words of Ron Swanson, placed together with a random picture to create a 'motivational' poster that you can save.  Make it into a t-shirt.  Or a coffe mug.  I don't care.  Just stop talking to me.  Please and thank you.</h3>
+    <!-- <div id="ron-image"><img src="images/ron4.jpg" alt="Ron Swanson"></div> -->
 
 
 
@@ -58,15 +61,15 @@
 
 
     <p class="start-page">Click the button below to create your motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
+    <p class="start-page">Why?  Because this is America.</p>
 
     <form>
-      <button type="button" class="start-page" id="home-get-quote">Make me a Ron quote poster!</button>
+      <button type="button" class="start-page" id="home-get-quote">Make your own Ron quote poster!</button>
       <p id="display-text-p" class="hide"></p>
       <button type="button" class="hide" id="use-this-quote">Use this quote</button>
       <button type="button" class="hide" id="new-ron-quote">New Ron quote</button>  
     </form>
 
-    <p id="save-message" class="hide">When satisfied with your poster, right click and select "save image as" to save your poster!</p>
     
     <footer class="hide">About This App
       <p><a href="https://www.freepik.com/free-photos-vectors/background">Background photo created by rawpixel.com - www.freepik.com</a></p>
