Increase default font size

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-    <p class="start-page">Click the button below to create your motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
+    <p class="start-page">Click the button below to create your own motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
     <p class="start-page">Why?  Because this is America.</p>
 
     <form>
