Firefox carousel fix

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <h1 class="start-page">Welcome to the Ron Swanson poster generator.</h2>
       <h3 class="start-page">Here you will find the wise and immutable words of Ron Swanson, placed together with a random picture to create a 'motivational' poster that you can save.  Make it into a t-shirt.  Or a coffe mug.  I don't care.  Just stop talking to me.  Please and thank you.</h3>
 
-      <div class="carousel-container">
+      <div class="carousel-container" id="carousel-container">
           <i class="fas fa-arrow-alt-circle-left" id="prev-button"></i>
           <i class="fas fa-arrow-alt-circle-right" id="next-button"></i>
           
-        <div class="carousel-slide">
+        <div class="carousel-slide" id="carousel-slide">
           <img src="images/image5.png" alt="Ron Swanson Quote" id="last-clone">
           <img src="images/image1.png" alt="Ron Swanson Quote">
           <img src="images/image2.png" alt="Ron Swanson Quote">
