More landing page images and new background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="main-container">
 
-      <div id="ron-image" class="start-page"><img src="images/ron4.jpg" alt="Ron Swanson"></div>
+      <div id="ron-image" class="start-page"></div>
 
       <canvas id="myCanvas" class="hide"></canvas>
 
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <p class="start-page">Click the button below to create your own motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu below.</p>
+      <p class="start-page">Click the button below to create your own motiavational poster with a random photo and Ron Swanson quote.  You can then tweak your poster with the settings in the menu.</p>
       <p class="start-page">Why?  Because this is America.</p>
 
       <form>
