--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         <button type="button" class="hide" id="use-this-quote">Use this quote</button>
         <button type="button" class="hide" id="new-ron-quote">New Ron quote</button>  
       </form>
-      
+
+      <!-- spinner -->
+      <div class="lds-hourglass hidden-scrollbar" id="spinner"></div>
+
+
       <script src="index.js"></script>
     </div> 
   </body>
