--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <canvas id="myCanvas" class="hide"></canvas>
 
       <div class="module bottom" id="display-module">
-        <img src="#" alt="" id="background-image" class="hide responsive">
+        <img src="#" alt="" crossorigin="anonymous" id="background-image" class="hide responsive">
         <div id="quote-container">
           <p class="final-quote" id="final-quote"></p>
         </div>  
